[project]
name = "rasa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9"
dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "transformers[torch]==4.37.2",
    "timm==0.4.9",
    "ruamel-yaml>=0.18.10",
    "spacy>=3.7.5",
    "torchmetrics==0.6.2",
    "importlib>=1.0.4",
    "pip>=25.0.1",
]

# 更新 CUDA 版本到 11.8
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

# 显式指定，确保只有明确指定的包从这里下载
explicit = true

# 指定 torch, torchvision, torchaudio 从 pytorch-cu118 索引下载
[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118" },
]
torchaudio = [
  { index = "pytorch-cu118" },
]
